--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ICS2O</name>
+	<name>ics2o-repository-Slam-James1</name>
 	<comment></comment>
 	<projects>
 	</projects>
